[package]
name = "pover"
version = "0.1.0"
authors = ["Tim Richter <tim@timrichter.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"