[package]
name = "pover"
version = "0.2.1"
authors = ["Tim Richter <tim@timrichter.dev>"]
edition = "2018"
description = "Small utility script to show package.json scripts in the current directory."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"
structopt = "0.3.13"
webbrowser = "0.5.5"